[project]
name = "langchain-hollow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain-openai>=1.1.11",
    "langchain-tools>=0.1.34",
    "langgraph>=1.1.3",
    "python-dotenv>=1.2.2",
]
